# ETL_Service

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  dump.rdb  pyproject.toml  superset_config.py
etl_service/: Dockerfile  etl.sh  main.py  pyproject.toml
etl_service/jobs/: users_etl.yaml
etl_service/src/: config.py  connections.py  services.py
jobs/: test.json  test2.json
src/: config.py  connections.py  logs.py  main.py  schema.py  services.py  state.py
