[project]
name = "german-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavel Glavan",email = "pglavan1998@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings (==2.10.1)",
    "psycopg (==3.2.9)",
    "redis (==6.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
ruff = "^0.12.3"

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.ruff]
line-length = 120

