[project]
name = "german-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavel Glavan",email = "pglavan1998@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings (==2.10.1)",
    "psycopg (==3.2.9)",
    "redis (==6.2.0)"
]

[project.optional-dependencies]
dev = [
    "mypy >=1.16.1,<2.0.0",
    "ruff >=0.12.3,<1.0.0"
]

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.ruff]
line-length = 120

